#17 Refresh game if event from another player
